// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetworkStep should render 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col mt-8 space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 text-theme-secondary-500 ring-theme-background dark:border-theme-secondary-700"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <div
              class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
            >
              PUBLIC NETWORKS
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-6 gap-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-secondary-700 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-secondary-700 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-bind.mainnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="mt-6"
          >
            <div
              class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
            >
              DEVELOPMENT NETWORKS
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-6 gap-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK Devnet"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-primary-300 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia Testnet"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-primary-300 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-bind.testnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`SelectNetworkStep should render without test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col mt-8 space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 text-theme-secondary-500 ring-theme-background dark:border-theme-secondary-700"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-6 gap-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-secondary-700 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-secondary-700 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-bind.mainnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;
